--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
     "@mysten/sui": "1.21.2",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/themes": "^3.1.1",
+    "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.50.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.476.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -26,10 +33,13 @@
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.5.3",
     "prettier": "^3.3.2",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5.7.2",
     "vite": "^6.0.7"
   }
