--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@radix-ui/themes": "^3.1.1",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.50.1",
+    "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.476.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
