--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.50.1",
     "@types/react-router-dom": "^5.3.3",
+    "brotli-dec-wasm": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.476.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
