--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "brotli-dec-wasm": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "jszip": "^3.10.1",
     "lucide-react": "^0.476.0",
     "react": "^18.3.1",
