--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/themes": "^3.1.1",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.50.1",
